Updated compare.yml with complete table list

--- a/compare.yml
+++ b/compare.yml
@@ -8,11 +8,107 @@
   :username: brian
   :password: brian
 :tables:
+- :name: ctfbadge_fb
+  :schema: epro
+  :sample: '0.05'
+  :check_column: indadd0
 - :name: ctfcesse_m
   :schema: epro
   :sample: '0.015'
   :check_column: no_bl
-- :name: ctfbadge_fb
+- :name: ctfcodpo_fb
   :schema: epro
-  :sample: '0.05'
+  :sample: '0.01'
+  :check_column: indadd0
+- :name: ctfcodre_fb
+  :schema: epro
+  :sample: '0.00015'
+  :check_column: indadd0
+- :name: ctfcomdo_d
+  :schema: epro
+  :sample: '0.001'
+  :check_column: indadd0
+- :name: ctfcomed_d
+  :schema: epro
+  :sample: '0.0002'
+  :check_column: indadd0
+- :name: ctfdonne_d
+  :schema: epro
+  :sample: '0.0003'
+  :check_column: indadd0
+- :name: ctfdonne_us
+  :schema: epro
+  :sample: '0.00035'
+  :check_column: indadd0
+- :name: ctfdonpe_d
+  :schema: epro
+  :sample: '0.015'
+  :check_column: no_donn
+- :name: ctfecard_d
+  :schema: epro
+  :sample: '0.0003'
+  :check_column: account_id
+- :name: ctfenvoi_col
+  :schema: epro
+  :sample: '0.0003'
+  :check_column: indadd0
+- :name: ctfinter_d
+  :schema: epro
+  :sample: '0.00035'
+  :check_column: indadd0
+- :name: ctflied2_d
+  :schema: epro
+  :sample: '0.00038'
+  :check_column: indadd0
+- :name: ctfliedo_d
+  :schema: epro
+  :sample: '0.0004'
+  :check_column: indadd0
+- :name: ctfpayde_d
+  :schema: epro
+  :sample: '0.00003'
+  :check_column: pay_transact
+- :name: ctfpaydl_d
+  :schema: epro
+  :sample: '0.00003'
+  :check_column: donor_id
+- :name: ctfquest_d
+  :schema: epro
+  :sample: '0.000001'
+  :check_column: indadd0
+- :name: ctfquest_q
+  :schema: epro
+  :sample: '0.000004'
+  :check_column: indadd0
+- :name: ctfresul_d_n
+  :schema: epro
+  :sample: '0.000003'
+  :check_column: key_don
+- :name: ctfsepar_d
+  :schema: epro
+  :sample: '0.000006'
+  :check_column: indadd0
+- :name: ctfsite_fb
+  :schema: epro
+  :sample: '3'
+  :check_column: indadd0
+- :name: ctfstobo_d
+  :schema: epro
+  :sample: '0.00005'
+  :check_column: indadd0
+- :name: ctfstock_d
+  :schema: epro
+  :sample: '0.1'
+  :check_column: indadd0
+- :name: ctfstock_wp
+  :schema: epro
+  :sample: '0.3'
+  :check_column: indadd0
+- :name: ctfstokx_d
+  :schema: epro
+  :sample: '0.00005'
+  :check_column: indadd0
+- :name: ctfstoli_m
+  :schema: epro
+  :sample: '0.00002'
   :check_column: indadd0
