--- a/compare.yml
+++ b/compare.yml
@@ -7,6 +7,8 @@
   :dbname: EPOL06
   :username: brian
   :password: brian
+:oldest_date: to_date('1970/01/01 00:00:00', 'yyyy/mm/dd hh24:mi:ss')
+:newest_date: trunc(sysdate)
 :tables:
 - :name: ctfbadge_fb
   :schema: epro
