--- a/compare.yml
+++ b/compare.yml
@@ -9,113 +9,89 @@
   :password: brian
 :oldest_date: to_date('1970/01/01 00:00:00', 'yyyy/mm/dd hh24:mi:ss')
 :newest_date: trunc(sysdate)
+:source_schema: epro
+:target_schema: epro
 :tables:
 - :name: ctfbadge_fb
-  :schema: epro
   :sample: '0.05'
   :check_column: indadd0
 - :name: ctfcesse_m
-  :schema: epro
   :sample: '0.015'
   :check_column: no_bl
 - :name: ctfcodpo_fb
-  :schema: epro
   :sample: '0.01'
   :check_column: indadd0
 - :name: ctfcodre_fb
-  :schema: epro
   :sample: '0.00015'
   :check_column: indadd0
 - :name: ctfcomdo_d
-  :schema: epro
   :sample: '0.001'
   :check_column: indadd0
 - :name: ctfcomed_d
-  :schema: epro
   :sample: '0.0002'
   :check_column: indadd0
 - :name: ctfdonne_d
-  :schema: epro
   :sample: '0.0003'
   :check_column: indadd0
 - :name: ctfdonne_us
-  :schema: epro
   :sample: '0.00035'
   :check_column: indadd0
 - :name: ctfdonpe_d
-  :schema: epro
   :sample: '0.015'
   :check_column: no_donn
 - :name: ctfecard_d
-  :schema: epro
   :sample: '0.0003'
   :check_column: account_id
 - :name: ctfenvoi_col
-  :schema: epro
   :sample: '0.00003'
   :check_column: indadd0
 - :name: ctfinter_d
-  :schema: epro
   :sample: '0.00035'
   :check_column: indadd0
 - :name: ctflied2_d
-  :schema: epro
   :sample: '0.000038'
   :check_column: indadd0
 - :name: ctfliedo_d
-  :schema: epro
   :sample: '0.00004'
   :check_column: indadd0
 - :name: ctfpayde_d
-  :schema: epro
   :sample: '0.00003'
   :check_column: pay_transact
 - :name: ctfpaydl_d
-  :schema: epro
   :sample: '0.00003'
   :check_column: 
   - donor_id
   - event_date
   - criteria_code
 - :name: ctfquest_d
-  :schema: epro
   :sample: '0.000001'
   :check_column: indadd0
 - :name: ctfquest_q
-  :schema: epro
   :sample: '0.000004'
   :check_column: indadd0
 - :name: ctfresul_d_n
-  :schema: epro
   :sample: '0.000003'
   :check_column: 
   - key_don
   - cod_ana
 - :name: ctfsepar_d
-  :schema: epro
   :sample: '0.000006'
   :check_column: indadd0
 - :name: ctfsite_fb
-  :schema: epro
   :sample: '3'
   :check_column: indadd0
 - :name: ctfstobo_d
-  :schema: epro
   :sample: '0.00005'
   :check_column: indadd0
 - :name: ctfstock_d
-  :schema: epro
   :sample: '0.1'
   :check_column: indadd0
 - :name: ctfstock_wp
-  :schema: epro
   :sample: '0.3'
   :check_column: indadd0
 - :name: ctfstokx_d
-  :schema: epro
   :sample: '0.00005'
   :check_column: indadd0
 - :name: ctfstoli_m
-  :schema: epro
   :sample: '0.00002'
   :check_column: indadd0
