--- a/compare.yml
+++ b/compare.yml
@@ -15,83 +15,109 @@
 - :name: ctfbadge_fb
   :sample: '0.05'
   :check_column: indadd0
+  :min_rows: 5
 - :name: ctfcesse_m
   :sample: '0.015'
   :check_column: no_bl
+  :min_rows: 7
 - :name: ctfcodpo_fb
   :sample: '0.01'
   :check_column: indadd0
+  :min_rows: 5
 - :name: ctfcodre_fb
   :sample: '0.00015'
   :check_column: indadd0
+  :min_rows: 18
 - :name: ctfcomdo_d
   :sample: '0.001'
   :check_column: indadd0
+  :min_rows: 13
 - :name: ctfcomed_d
   :sample: '0.0002'
   :check_column: indadd0
+  :min_rows: 10
 - :name: ctfdonne_d
-  :sample: '0.0003'
+  :sample: '0.0005'
   :check_column: indadd0
+  :min_rows: 18
 - :name: ctfdonne_us
   :sample: '0.00035'
   :check_column: indadd0
+  :min_rows: 18
 - :name: ctfdonpe_d
   :sample: '0.015'
   :check_column: no_donn
+  :min_rows: 10
 - :name: ctfecard_d
   :sample: '0.0003'
   :check_column: account_id
+  :min_rows: 10
 - :name: ctfenvoi_col
   :sample: '0.00003'
   :check_column: indadd0
+  :min_rows: 10
 - :name: ctfinter_d
   :sample: '0.00035'
   :check_column: indadd0
+  :min_rows: 18
 - :name: ctflied2_d
   :sample: '0.000038'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfliedo_d
   :sample: '0.00004'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfpayde_d
   :sample: '0.00003'
   :check_column: pay_transact
+  :min_rows: 10
 - :name: ctfpaydl_d
   :sample: '0.00003'
   :check_column: 
   - donor_id
   - event_date
   - criteria_code
+  :min_rows: 15
 - :name: ctfquest_d
   :sample: '0.000001'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfquest_q
   :sample: '0.000004'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfresul_d_n
   :sample: '0.000003'
   :check_column: 
   - key_don
   - cod_ana
+  :min_rows: 25
 - :name: ctfsepar_d
   :sample: '0.000006'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfsite_fb
   :sample: '3'
   :check_column: indadd0
+  :min_rows: 5
 - :name: ctfstobo_d
   :sample: '0.00005'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfstock_d
   :sample: '0.1'
   :check_column: indadd0
+  :min_rows: 10
 - :name: ctfstock_wp
   :sample: '0.3'
   :check_column: indadd0
+  :min_rows: 10
 - :name: ctfstokx_d
   :sample: '0.00005'
   :check_column: indadd0
+  :min_rows: 25
 - :name: ctfstoli_m
   :sample: '0.00002'
   :check_column: indadd0
+  :min_rows: 18
